Remove string literals :(